password reset with mail, errors display left

--- a/better_site/accounts/templates/accounts/login.html
+++ b/better_site/accounts/templates/accounts/login.html
@@ -34,7 +34,7 @@
                 <p>Не зарегестрированы?&nbsp;<a href="{% url 'sign_up' %}?next={{ next }}">Регистрация</a></p>
             </div>
 
-            <a href="{% url 'password_reset' %}">Забыли пароль?</a>
+            <a class="forgot_password" href="{% url 'password_reset' %}">Забыли пароль?</a>
 
          </div>
 </div>
