--- a/better_site/accounts/templates/accounts/password_reset_complete.html
+++ b/better_site/accounts/templates/accounts/password_reset_complete.html
@@ -5,7 +5,9 @@
 
 {% block content %}
 
-<p style="margin-top: 25vh;">Вы успешно сменили пароль</p>
-<a href="{% url 'login' %}">Войти в аккаунт </a>
+<div class="password_reset_done">
+    <h3>Вы успешно сменили пароль</h3>
+    <h3><a href="{% url 'login' %}">Войти в аккаунт </a></h3>
+</div>
 
 {% endblock %}
