--- a/better_site/accounts/templates/accounts/password_reset_confirm.html
+++ b/better_site/accounts/templates/accounts/password_reset_confirm.html
@@ -5,21 +5,61 @@
 
 {% block content %}
 
-{% if validlink %}
-<h3 style="margin-top: 15vh;">Смена пароля</h3>
+    {% if validlink %}
 
-<div class="update_profile_form_container reset_password">
-    <i class="fa-solid fa-fingerprint user_logo"></i>
-    <form method="POST">
-        {% csrf_token %}
-        {{form.as_p}}
-        <button type="submit">Подтвердить</button>
 
-    </form>
+    <div class="update_profile_form_container reset_password">
+        <i class="fa-solid fa-fingerprint user_logo"></i>
+        <form method="POST">
+            {% csrf_token %}
+            <h3 class="password_reset_label">Введите новый пароль</h3>
+            {{form.as_p}}
+            <i class="fa-solid fa-eye-slash eye-icon_1"></i>
+            <i class="fa-solid fa-eye-slash eye-icon_2"></i>
+            <button type="submit">Подтвердить</button>
 
-{% else %}
-<p>Ссылка для смены пароля некорректна, возможно, она уже была использована. Запросите смену пароля повторно.</p>
+        </form>
 
-{% endif %}
+    {% else %}
+    <p>Ссылка для смены пароля некорректна, возможно, она уже была использована. Запросите смену пароля повторно.</p>
+
+    {% endif %}
+
+
+<script>
+    var input_new_password_1 = document.getElementById ("id_new_password1");
+    input_new_password_1.placeholder = "Новый пароль";
+
+    var input_new_password_2 = document.getElementById ("id_new_password2");
+    input_new_password_2.placeholder = "Повторите пароль";
+
+
+    const EyeIcon1 = document.querySelector('.eye-icon_1'),
+            PasswordField1 = document.getElementById('id_new_password1');
+
+    EyeIcon1.addEventListener('click', () => {
+        if(PasswordField1.type === "password") {
+            PasswordField1.type = "text";
+            EyeIcon1.classList.replace("fa-eye-slash", "fa-eye")}
+        else{
+            PasswordField1.type = "password";
+            EyeIcon1.classList.replace("fa-eye", "fa-eye-slash")
+        }
+    })
+
+    const EyeIcon2 = document.querySelector('.eye-icon_2'),
+            PasswordField2 = document.getElementById('id_new_password2');
+
+    EyeIcon2.addEventListener('click', () => {
+        if(PasswordField2.type === "password") {
+            PasswordField2.type = "text";
+            EyeIcon2.classList.replace("fa-eye-slash", "fa-eye")}
+        else{
+            PasswordField2.type = "password";
+            EyeIcon2.classList.replace("fa-eye", "fa-eye-slash")
+        }
+});
+
+</script>
 
 {% endblock %}
