--- a/better_site/accounts/templates/accounts/update_profile.html
+++ b/better_site/accounts/templates/accounts/update_profile.html
@@ -49,7 +49,7 @@
                     {% endfor %}
                 </ul>
                 {% else %}
-                <p>Вам пока ничего не понравилось</p>
+                <p class="no_liked_posts">Список понравившихся статей пока пуст</p>
                 {% endif %}
             </div>
         </div>
