--- a/better_site/main/static/main/css/main.css
+++ b/better_site/main/static/main/css/main.css
@@ -1944,6 +1944,7 @@ input::placeholder {
     padding: 7px;
     height: auto;
     transition: .2s;
+    border: 0px;
     border-color: transparent;
 }
 
@@ -2163,6 +2164,19 @@ input::placeholder {
     color: rgba(255, 255, 255, 0.6);
 }
 
+.no_liked_posts {
+    color: white;
+    font-size: 1.6rem;
+/*    background-color: red;*/
+    width: 100%;
+    text-align: center;
+/*    position: absolute;*/
+/*    top: 20px;*/
+    margin: 0;
+    padding: 0;
+
+}
+
 .form_email_to_password_reset {
 /*    background-color: red;*/
     margin: 3vh 0 0 3vw;
@@ -2175,9 +2189,16 @@ input::placeholder {
 }
 
 
-/*.password_reset_email {*/
+.password_reset_email {
 /*    background-color: greenyellow;*/
-/*}*/
+    margin: 10vh 0 0 0;
+    padding: 10vh 0 0 10vw;
+    height: 45vh;
+    width: 100vw;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
 
 .password_reset_email h3 {
 /*    background-color: blueviolet;*/
@@ -2202,12 +2223,15 @@ input::placeholder {
 
 
 .form_email_to_password_reset input {
-/*    background-color: green;*/
-    width: 100%;
-    height: 2rem;
+/*    background-color: rgba(0, 0, 0, 0.05);*/
+    width: 35vw;
+    border-radius: 30px;
+    border: 1px solid  rgba(0, 0, 0, 0.05);
+    padding: 0 30px;
+    height: 2.5rem;
     left: 0;
-    font-size: 1.2rem;
-    border-bottom: 0.5px solid rgba(0, 0, 0, 0.3);
+    font-size: 1.1rem;
+/*    border-bottom: 0.5px solid rgba(0, 0, 0, 0.3);*/
     margin: 0 0 2vh 0;
 }
 
@@ -2217,7 +2241,7 @@ input::placeholder {
     padding: 2% 4%;
     bottom: -60px;
     left: 0;
-    width: fit-content;
+    width: 25vh;
     margin: 0;
     display: flex;
     align-items: center;
@@ -2229,8 +2253,6 @@ input::placeholder {
     height: 50px;
 }
 
-
-
 .form_email_to_password_reset .submit_email:hover {
     background-color: #fcd8e2;
     border-color: transparent;
@@ -2238,6 +2260,11 @@ input::placeholder {
 /*    padding: 2% 5%;*/
     box-shadow: inset 0px 0px 0px 2px #ff007d;
     border: 0px;
+}
+
+.forgot_password {
+    text-decoration: none;
+    color: #ff007d;
 }
 
 .password_reset_done {
@@ -2258,20 +2285,135 @@ input::placeholder {
     padding: 0;
     font-size: clamp(1.2rem, 0.9333rem + 1.0667vw, 1.6rem);
     text-align: center;
-
 }
 
+.password_reset_done a {
+    text-decoration: none;
+    margin: 2vh 0 0 0;
+    background-color: #ff007d;
+    color: #fff;
+    padding: 2% 4%;
+    width: 23vw;;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: clamp(1rem, 0.8rem + 0.8vw, 1.3rem);
+    border-radius: 40px;
+    transition: .3s;
+    border-color: transparent;
+    height: 50px;
+    border: 0px;
+}
+
+.password_reset_done a:hover {
+    background-color: #fcd8e2;
+    border-color: transparent;
+    color: #ff007d;
+/*    padding: 2% 5%;*/
+    box-shadow: inset 0px 0px 0px 2px #ff007d;
+}
+
+
+.password_reset_label {
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top:  -2vh;
+    left: 5vh;
+    font-size: clamp(1.2rem, 0.8rem + 1.6vw, 1.8rem);
+/*    background-color: greenyellow;*/
+}
+
+
 .reset_password {
-    background-color: #f6b6b6;
+/*    background-color: #f6b6b6;*/
+    margin: 10vh 0 0 0;
+    padding: 10vh 0 0 10vw;
+    height: 45vh;
+    width: 100vw;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
 
 .reset_password label, ul {
     display: none;
 }
 
+.reset_password form {
+/*    background-color: red;*/
+    margin: 2vh 0 0 0;
+    padding: 0;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    position: relative;
+    gap: 10px;
+
+}
+
+
 .reset_password input {
-    background-color: blueviolet;
-    margin: 5vh;
+/*    background-color: #b8f3b3;*/
+    margin: 0vh 0 0 2vh;
+    left: 0;
+    font-size: 1.2rem;
+/*    border-bottom: 0.5px solid rgba(0, 0, 0, 0.3);*/
+    width: 35vw;
+    border-radius: 30px;
+    border: 1px solid  rgba(0, 0, 0, 0.05);
+    padding: 0 30px;
+    height: 2.5rem;
+    left: 0;
+    font-size: 1.1rem;
+}
+
+
+.reset_password form button {
+    position: absolute;
+    left: 5vh;
+    bottom: -30px;
+    margin: 0;
+    background-color: #ff007d;
+    color: #fff;
+    padding: 2% 4%;
+    width: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: clamp(1rem, 0.8rem + 0.8vw, 1.3rem);
+    border-radius: 40px;
+    transition: .3s;
+    border-color: transparent;
+    height: 50px;
+    border: 0px;
+}
+
+.reset_password form button:hover {
+    background-color: #fcd8e2;
+    border-color: transparent;
+    color: #ff007d;
+/*    padding: 2% 5%;*/
+    box-shadow: inset 0px 0px 0px 2px #ff007d;
+}
+
+
+.reset_password .eye-icon_1 {
+    position: absolute;
+    top: 7.4vh;
+    right: 26vw;
+    color: #ff007da6;
+    font-size: 1.1rem;
+    cursor: pointer;
+    pointer-events: auto;
+}
+
+.reset_password .eye-icon_2 {
+    position: absolute;
+    top: 15vh;
+    right: 26vw;
+    color: #ff007da6;
+    font-size: 1.1rem;
 }
 
 /* for medium devices */
