--- a/better_site/accounts/templates/accounts/password_reset.html
+++ b/better_site/accounts/templates/accounts/password_reset.html
@@ -9,7 +9,7 @@
         <i class="fa-regular fa-envelope user_logo"></i>
 
         <div class="form_email_to_password_reset">
-            <h3>Введите почту для сброса пароля</h3>
+            <h3>Сброс пароля</h3>
             <form method="POST">
             {% csrf_token %}
             {{form.as_p}}
@@ -18,6 +18,8 @@
         </div>
     </div>
 
-
-
+<script>
+    var input_email = document.getElementById ("id_email");
+    input_email.placeholder = "Введите почту";
+</script>
 {% endblock %}
