password reset with mail errors display made + responsive

--- a/better_site/accounts/templates/accounts/password_reset_confirm.html
+++ b/better_site/accounts/templates/accounts/password_reset_confirm.html
@@ -21,7 +21,9 @@
         </form>
 
     {% else %}
-    <p>Ссылка для смены пароля некорректна, возможно, она уже была использована. Запросите смену пароля повторно.</p>
+    <div class="password_reset_done">
+        <h3>Ссылка для смены пароля некорректна, возможно, она уже была использована. Запросите смену пароля повторно.</h3>
+    </div>
 
     {% endif %}
 
@@ -35,7 +37,7 @@
 
 
     const EyeIcon1 = document.querySelector('.eye-icon_1'),
-            PasswordField1 = document.getElementById('id_new_password1');
+    PasswordField1 = document.getElementById('id_new_password1');
 
     EyeIcon1.addEventListener('click', () => {
         if(PasswordField1.type === "password") {
@@ -48,7 +50,7 @@
     })
 
     const EyeIcon2 = document.querySelector('.eye-icon_2'),
-            PasswordField2 = document.getElementById('id_new_password2');
+    PasswordField2 = document.getElementById('id_new_password2');
 
     EyeIcon2.addEventListener('click', () => {
         if(PasswordField2.type === "password") {
@@ -58,7 +60,46 @@
             PasswordField2.type = "password";
             EyeIcon2.classList.replace("fa-eye", "fa-eye-slash")
         }
-});
+    });
+
+
+    let errors = document.querySelectorAll('.errorlist li');
+    console.log('содержание ошибки', errors);
+    let errorList = document.querySelector('.errorlist');
+    console.log(errorList);
+
+    //for (var i = 0; i < errors.length; ++i) {
+    //    console.log('ok')
+    //}
+
+    for (const li of errors) {
+        if (li.textContent === 'The two password fields didn’t match.') {
+            console.log(li.textContent);
+            li.textContent = 'Пароли не совпадают';
+        }
+
+        if (li.textContent === 'The password is too similar to the username.') {
+            console.log(li.textContent);
+            li.textContent = 'Пароль слишком похож на логин';
+        }
+
+        if (li.textContent === 'This password is too short. It must contain at least 8 characters.') {
+            console.log(li.textContent);
+            li.textContent = 'Слишком короткий пароль (меньше 8 символов).';
+        }
+
+        if (li.textContent === 'This password is too common.') {
+            console.log(li.textContent);
+            li.textContent = 'Слишком простой пароль';
+        }
+
+        if (li.textContent === 'The password is too similar to the email address.') {
+            console.log(li.textContent);
+            li.textContent = 'Пароль похож на почту';
+        }
+    };
+
+
 
 </script>
 
