home page scroll appearing text on russian

--- a/better_site/main/templates/main/home.html
+++ b/better_site/main/templates/main/home.html
@@ -75,15 +75,16 @@
 
     <div class="info">
         <h2>
-            <span>SOME INFO ABOUT US</span>
+            <span>Информация о нас</span>
         </h2>
 
         <p>
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                aute irure dolor in reprehenderit </span>
+            <span>
+                Мы рассказываем о банках и банковских картах, даем пользователям актуальную и полезную
+                информацию о различных финансовых учреждениях, их продуктах и услугах.
+                Расскажем, где выгоднее условия кредитных и дебетовых карт, а также дадим инструкцию по тому,
+                как получить такие условия и начать пользоваться всеми плюшками.
+               </span>
         </p>
     </div>
 
